ecmascript/parser/tests/jsx/errors/wrong-opening-tag-fragment/input.js.stderr
error: Expected corresponding JSX closing tag for <something>
 --> $DIR/tests/jsx/errors/wrong-opening-tag-fragment/input.js:1:12
  |
1 | <something></>
  |            ^^^

